--- a/beagle.html
+++ b/beagle.html
@@ -8,7 +8,7 @@
 <body>
     <div>
         <h1><u> Beagle Blog</u></h1>
-        <p>
+        <p >
             The <b>Beagle</b> is a breed of small scent hound, similar in appearance to the much larger foxhound.
              The <b>beagle</b> was developed primarily for hunting hare, known as beagling. 
              Possessing a great sense of smell and superior tracking instincts, 
@@ -20,8 +20,8 @@
     </div>
     <div>
         <h1><u>Images</u></h1>
-        <img height="400px" src="https://cdn.britannica.com/16/234216-050-C66F8665/beagle-hound-dog.jpg">
-        <br>
+        <a href="https://www.britannica.com/animal/beagle-dog"> <img height="400px" src="https://cdn.britannica.com/16/234216-050-C66F8665/beagle-hound-dog.jpg"></a> 
+        <br><br> 
         <a href="https://www.google.com/search?q=beagle&rlz=1C5CHFA_enUS944US945&sxsrf=ALiCzsYi_xLzuX5-mgRt-U2UMiiEwhaCTA:1672839794160&source=lnms&tbm=isch&sa=X&ved=2ahUKEwiat8ntha78AhVnDbcAHX7UCYYQ_AUoAXoECAEQAw&biw=1629&bih=894&dpr=2.2"><u>More Images</u></a>
     </div>
     <div>
